# yt-dlp-GUI-2

./: .gitignore  .prettierignore  .prototools  README.md  THIRD_PARTY_NOTICES.md  biome.json  eslint.config.js  index.html  knip.json  latest.json  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.codex/: config.toml
.github/workflows/: build.yml  create-release-pr.yml  tag-trigger.yml  tag-version.yml  watch-tools.yml
docs/: RELEASE_WORKFLOW.md
patches/wry/: Cargo.toml
patches/wry/src/webview/webkitgtk/: mod.rs
scripts/: build-server-cli-sidecar.cjs  copy-tools-manifest.cjs  gen-tools-manifest.py  retag.sh  update-version.sh
src/: main.css  main.tsx  types.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_handlers.rs  config.rs  download_command.rs  lib.rs  main.rs  notification.rs  process_manager.rs  server.rs  system.rs  tools.rs  update.rs
src-tauri/src/client/: remote.rs
src-tauri/src/server_cli/: http.rs  mod.rs  options.rs  process.rs  service.rs  tray.rs
src-tauri/src/tools/: download.rs  manifest.rs  path.rs
src/Home/: downloadForm.ts  index.css  index.tsx
src/Setting/: index.css  index.tsx
src/ToolSetup/: index.css  index.tsx
src/_components/AppContext/: index.tsx
src/_components/BottomTab/: index.css  index.tsx
src/_components/ConsoleBox/: index.css  index.tsx
src/_components/CustomAppBar/: index.tsx
src/_components/CustomButton/: index.tsx
src/_components/CustomExplorer/: index.css  index.tsx
src/_components/DropDownWithArrows/: index.css  index.tsx
src/_components/EventEmitter/: index.tsx
src/_components/ExecuteButton/: index.css  index.tsx
src/_components/FormControls/: index.tsx
src/_components/PrimaryCircleButton/: index.tsx
src/_components/Surface/: index.tsx
src/_components/TabComponent/: index.css  index.tsx
src/_components/ThemeContext/: index.tsx
src/_components/ThemeSelector/: index.css  index.tsx
src/_components/ToolDownloadProgress/: index.tsx
src/_components/WindowControls/: index.css  index.tsx
src/_lib/: AppContext.tsx
src/_utils/: toolAvailability.ts
src/ui/: button.tsx  cn.ts  icons.tsx  input.tsx  select.tsx  switch.tsx
