[package]
name = "yt-dlp-GUI"
version = "1.0.7"
description = "yt-dlp-GUI"
authors = ["AkaakuHub"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "fs-read-dir", "path-all", "notification-all", "clipboard-all", "dialog-all", "window-maximize", "window-unminimize", "window-start-dragging", "window-hide", "window-minimize", "window-close", "window-unmaximize", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dirs = "5.0.1"
showfile = "0.1.1"
urlencoding = "2.1.3"
encoding_rs = "0.8.34"
reqwest = { version = "0.12.7", features = ["json"] }
hyper = "1.4.1"
tauri-plugin-drag = "0.3.1"
open = "5.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
