[package]
name = "yt-dlp-GUI"
version = "2.0.3"
description = "yt-dlp-GUI"
authors = ["AkaakuHub"]
edition = "2021"
default-run = "yt-dlp-GUI"

[lib]
name = "yt_dlp_gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
window-shadows-v2 = "0.1.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
dirs = "5.0.1"
showfile = "0.1.1"
urlencoding = "2.1.3"
encoding_rs = "0.8.34"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
hyper = "1.4.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-drag = "2.1.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
open = "5.3.0"
futures-util = "0.3"
zip = "0.6"
sha2 = "0.10"
auto-launch = "0.6.0"
rand = "0.9"
tao = "0.35.2"
tray-icon = "0.23.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
